--- a/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/ListViewTestParametersUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ProfilesPageComponents/ListViewTestParametersUserControl.xaml
@@ -71,7 +71,7 @@
                                     <ColumnDefinition Width="auto"/>
                                 </Grid.ColumnDefinitions>
                                 <Label Grid.Column="0" Grid.Row="0" Content="{Binding Converter={StaticResource TP2S}}" />
-                                <customControl:CheckBox Grid.Column="1" Grid.Row="0" IsChecked="{Binding IsEnabled}" Content="{x:Static res:Resources.IsActive}"
+                                <CheckBox Grid.Column="1" Grid.Row="0" IsChecked="{Binding IsEnabled}" Content="{x:Static res:Resources.IsActive}"
                                                         d:DataContext="{d:DesignInstance baseTestParametersAndNormatives:BaseTestParametersAndNormatives }" />
                                 <Button Grid.Column="2" Grid.Row="0" Style="{StaticResource ButtonWithIcon}" Click="DeleteParameter_Click">
                                     <iconPacks:PackIconMaterial Kind="Delete" />
